# sui-liveness-detection

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
docs/: 01-product-brief.md  (+16 more)
services/verifier/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/verifier/app/: __init__.py  main.py
services/verifier/app/adapters/: __init__.py  command_runner.py  evidence_encryptor.py  evidence_store.py  proof_minter.py
services/verifier/app/api/: __init__.py  routes.py  websocket.py
services/verifier/app/core/: config.py  logging.py
services/verifier/app/pipeline/: __init__.py  antispoof.py  deepfake.py  evidence.py  face.py  human_face.py  image_utils.py  landmark_metrics.py  liveness.py  quality.py  types.py
services/verifier/app/sessions/: __init__.py  debug.py  finalize.py  frame_pipeline.py  models.py  redis_store.py  service.py  store.py
services/verifier/models/: README.md  SOURCES.md
services/verifier/models/anti_spoof/: manifest.json
services/verifier/models/deepfake/: config.json
services/verifier/sample-data/attack-matrix/: README.md  local-dev.template.ndjson
services/verifier/scripts/: analyze_attack_matrix.py  analyze_calibration_samples.py  export_silent_face_onnx.py
services/verifier/tests/: conftest.py  test_attack_matrix_analysis.py  test_calibration_analysis.py  test_deepfake_evaluator.py  test_face_quality.py  test_finalize_confidence.py  test_landmark_spotcheck.py  test_liveness_motion_continuity.py  test_logging.py  test_real_adapters.py  test_session_flows.py
(+112 files in other folders)
